<resources>
    <string name="app_name">Bouwtrillingsmeter</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_first_visit_tutorial">First visit tutorial!</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="default_text">Assigned trough code</string>
    <string name="default_yes">Ja</string>
    <string name="default_no">Nee</string>
    <string name="default_ok">OK</string>
    <string name="default_cancel">Annuleren</string>
    <string name="shared_preferences">sharedPreferencesBouwtrillingsmeterAndroid</string>
    <string name="pref_user_uid">userUID</string>
    <string name="pref_has_visited_before">hasVisitedBefore</string>
    <string name="pref_internal_measurement_finished">measurementFinished</string>
    <string name="pref_show_graphs">showGraph</string>
    <string name="pref_allow_roaming">allowRoaming</string>
    <string name="pref_allow_stream_all_data">allowStreamAllData</string>
    <string name="pref_use_pickup">usePickup</string>
    <string name="settings_enable_roaming">Sta gegevens uploaden toe via roaming</string>
    <string name="settings_enable_roaming_alert_dialog">Uw provider kan extra kosten in rekening brengen voor het uploaden van data via roaming. Wilt u verder gaan?</string>
    <string name="settings_enable_uploading_all_data">Upload alle gegevens via mobiele netwerken</string>
    <string name="settings_enable_uploading_all_data_alert_dialog">Uw provider kan extra kosten in rekening brengen als u buiten uw mobiele netwerk bundel gaat. Wilt u verder gaan?</string>
    <string name="settings_enable_pickup">Meting starten zodra de telefoon plat ligt</string>
    <string name="settings_advanced_open">Geavanceerde instellingen</string>
    <string name="settings_advanced_show_graphs">Laat grafieken zien</string>
    <string name="settings_advanced_show_user_uid">Toon gebruiker UID</string>
    <string name="settings_advanced_delete_application_data">Verwijder gegevens en voorkeuren</string>
    <string name="settings_advanced_delete_application_data_alert_dialog_success">Alle gegevens en voorkeuren zijn verwijderd.</string>
    <string name="settings_advanced_delete_application_data_alert_dialog_fail">Er is iets fout gegaan tijdens het verwijderen van de gegevens.</string>
    <string name="measurement_list_empty">U heeft nog geen opgeslagen metingen</string>
    <string name="measurement_name_format" formatted="false">Meting in %s</string>
    <string name="measurement_name_default">Meting op onbekende locatie</string>
    <string name="measurement_default_datetime">Onbekende datum en tijd</string>
    <string name="measurement_default_location">Onbekende locatie</string>
    <string name="measurement_default_description">Voeg een beschrijving toe</string>
    <string name="first_visit_popup">Klik op het plusje om uw eerste meting te starten</string>
    <string name="first_visit_skip">Overslaan</string>
    <string name="first_visit_next">Volgende</string>
    <string name="first_visit_start">Start</string>
    <string name="first_visit_slide_1_title">Tutorial slide 1</string>
    <string name="first_visit_slide_2_title">Tutorial slide 2</string>
    <string name="first_visit_slide_3_title">Tutorial slide 3</string>
    <string name="first_visit_slide_1_description">Dit is een stuk beschrijving voor stap 1</string>
    <string name="first_visit_slide_2_description">Deze tekst bevat meer beschrijvingen voor de gebruiker</string>
    <string name="first_visit_slide_3_description">Je raadt het nooit - Nog meer beschrijvingen!</string>
    <string name="title_activity_alleen_constraints">AlleenConstraints</string>
    <string name="wizard_button_try_again">Opnieuw</string>
    <string-array name="wizard_question_text_main">
        
        <item>Bestaat het pand waarin u wilt meten uit een betonnen bebouwing met metselwerk of gevelbekleding.</item>
        
        <item>Bestaat het pand waarin u wilt meten uit gemetselde wanden?</item>
        
        <item>Bestaat het pand uit een stalenskelet, glas als gevelbekleding of hout?</item>
        
        <item>Betreft de bebouwing een monument of beschermd stadsgezicht?</item>
        
        <item>Verkeerd het pand in slechte bouwkundige staat?</item>
        
        <item>Betreft de bebouwing een monument of beschermd stadsgezicht?</item>
        
        <item>Zijn de trillingen die u wilt meten afkomstig van een van onderstaande bronnen:\n- explosies\n- botsingen\n- Het van hoogte legen van kraanbakken\n- Het met de kraan breken van beton\n- Storten van puin in container(bak)</item>
        
        <item>Zijn de trillingen die u wilt meten afkomstig van een van onderstaande bronnen:\n- weg of railverkeer\n- heiwerkzaamheden\nHet rijden shovel en kranen</item>
        
        <item>Zijn de trillingen die u wilt meten afkomstig van een van onderstaande bronnen:\n- Intrillen van damwanden\n- trilwalsen en trilplaten</item>
        
        <item>Is het pand gefundeerd op houten funderingspalen of is het pand op staal gefundeerde?</item>
    </string-array>
    <string-array name="wizard_question_text_extra">
        
        <item>Veel bebouwing na 1970 valt in deze categorie.</item>
        
        <item>Veel bebouwing van voor 1970 valt in deze categorie.</item>
        
        <item>Bijvoorbeeld Kantoor gebouwen met grote glazen gevels of houten schuurtjes.</item>
        
        <item></item>
        
        <item>Zijn er bijvoorbeeld scheuren of kieren of andere schade aan het pand aanwezig.</item>
        
        <item></item>
        
        <item></item>
        
        <item></item>
        
        <item></item>
        
        <item></item>
    </string-array>
    <string-array name="wizard_outcome_text">
        
        <item>Het pand kan niet worden in gedeeld in een categorie van de SBR-A richtlijn.</item>
        
        <item>Het pand behoort in categorie 3 van de SBR-A richtlijn.</item>
        
        <item>Er is geen kwalificatie voor het type bebouwing kunnen maken.</item>
        
        <item>Het pand behoort in categorie 1 van de SBR-A richtlijn.</item>
        
        <item>Het pand behoort in categorie 2 van de SBR-A richtlijn.</item>
        
        <item>Er is geen kwalificatie voor het type trilling kunnen maken.</item>
        
        <item>De trillingen zijn conform de SBR-A richtlijn geclassificeerd als "kortdurende trillingen"</item>
        
        <item>De trillingen zijn conform de SBR-A richtlijn geclassificeerd als "herhaald kortdurende trillingen"</item>
        
        <item>De trillingen zijn conform de SBR-A richtlijn geclassificeerd als "continue trillingen"</item>
        
        <item>Het pand is niet geclassificeerd als trillingsgevoelig volgens de SBR-A richtlijn.</item>
        
        <item>het pand is geclassificeerd als trillingsgevoelig volgens de SBR-A richtlijn.</item>
    </string-array>
    <string name="widget_final_top_success">Aan de hand van uw antwoorden is het volgende bepaald:</string>
    <string name="widget_final_categorie_gebouw">Categorie pand</string>
    <string name="widget_final_categorie_trilling">Categorie trilling</string>
    <string name="widget_final_trillingsgevoelig">Trillingsgevoelig</string>
    <string name="alert_dialog_enable_location">Schakel uw locatie in om verder te gaan.</string>
    <string name="category_vibration_sensitive">Trillingsgevoelig gebouw</string>
    <string name="category_i_dont_know">Ik weet het niet</string>
    <string-array name="category_dropdown_building">
        <item>Kies categorie gebouw...</item>
        <item>Categorie 1</item>
        <item>Categorie 2</item>
        <item>Categorie 3</item>
    </string-array>
    <string-array name="category_dropdown_vibration">
        <item>Kies type trilling...</item>
        <item>Kort</item>
        <item>Kort herhaald</item>
        <item>Continu</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="category_notyetselected_building">Selecteer het type gebouw</string>
    <string name="category_notyetselected_vibration">Selecteer het type vibratie</string>
    <string name="preparing_cycle_place_device_on_table">Leg de telefoon plat neer...</string>
    <string name="preparing_cycle_start_flat">De meting begint zodra de telefoon stil ligt...</string>
    <string name="preparing_cycle_start_button">Druk op start om de meting te starten...</string>
    <string name="preparing_cycle_start_flag">start_flag</string>
    <string name="measuring_cycle_measuring_now_alpha">Aan het meten\nLaat de telefoon liggen</string>
    <string name="measuring_cycle_measuring_now">Aan het meten...</string>
    <string name="measuring_cycle_keep_on_table">Laat de telefoon liggen...</string>
    <string name="measuring_cycle_stop_flag">stop_flag</string>
    <string name="measuring_cycle_stop_pickup">Pak de telefoon op als u de meting wilt stoppen...</string>
    <string name="measuring_cycle_stop_button">Druk op stop als u de meting wilt stoppen...</string>
    <string name="measuring_cycle_exceeding_detected_flag">exceeding_flag</string>
    <string name="measuring_cycle_no_exceeding_detected">Nog geen overschrijding gedetecteerd...</string>
    <string name="measuring_cycle_exceeding_detected">Er zijn overschrijdingen gedetecteerd...</string>
    <string name="measuring_cycle_exceeding_detected_now">Overschrijding gedecteerd! Laat de telefoon liggen...</string>
    <string name="measuring_show_graphs">Laat grafieken zien</string>
    <string name="measuring_alert_dialog_back">Wilt u teruggaan?</string>
    <string name="measuring_alert_dialog_stop">Wilt u de meting stoppen?</string>
    <string name="measuring_snackbar_unlocked_graphs">Grafieken zijn ingeschakeld.</string>
    <string name="measuring_snackbar_relocked_graphs">Grafieken zijn uitgeschakeld.</string>
    <string name="measuring_start">Start</string>
    <string name="measuring_stop">Stop</string>
    <string name="finished_measurement_completed">Meting voltooid!</string>
    <string name="finished_measurement_not_exceeded">Er is geen overschrijding gedetecteerd.</string>
    <string name="finished_measurement_exceeded">Er is een overschrijding gedecteerd!</string>
    <string name="finished_measurement_exit_save_confirm">Uw meting is opgeslagen en wordt verzonden</string>
    <string name="finished_measurement_description_default">Voeg een beschrijving toe...</string>
    <string-array name="graph_title">
        <item>Versnellingsdiagram</item>
        <item>Snelheidsdiagram</item>
        <item>Dominante frequentie continu</item>
        <item>Frequentiespectrum</item>
        <item>Dominante frequentie</item>
    </string-array>
    <string-array name="graph_axis_vertical">
        <item>Versnelling [mm/s2]</item>
        <item>Snelheid [mm/s]</item>
        <item>(Dominante) frequentie [Hz]</item>
        <item>Amplitude (snelheid) [mm/s]</item>
        <item>Amplitude (snelheid) [mm/s]</item>
    </string-array>
    <string-array name="graph_axis_horizontal">
        <item>Tijd [s]</item>
        <item>Tijd [s]</item>
        <item>Tijd [s]</item>
        <item>Frequentie [Hz]</item>
        <item>Frequentie [Hz]</item>
    </string-array>
    <string-array name="graph_legend_xyz_names">
        <item>X</item>
        <item>Y</item>
        <item>Z</item>
    </string-array>
    <string name="graph_legend_fourier">Amplitude</string>
    <string name="graph_legend_limitline_name">Grenswaarde</string>
    <string name="graph_legend_exceeding_name">Overschrijdingen</string>
    <string name="alert_dialog_unsupported_hardware_title">Ontoereikende hardware</string>
    <string name="alert_dialog_unsupported_hardware_message">Uw telefoon mist essentiële hardware. De applicatie zal nu sluiten.</string>
</resources>