<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gemeenterotterdam.trillingmeterapp.frontend.SettingsAdvancedActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <Switch
            android:id="@+id/switchSettingsAdvancedShowGraphs"
            style="@style/SwitchColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/settings_advanced_show_graphs"
            android:theme="@style/SwitchColor" />

        <Button
            android:id="@+id/buttonSettingsAdvancedShowUserUID"
            style="@style/SwitchColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@null"
            android:gravity="start|center_vertical"
            android:text="@string/settings_advanced_show_user_uid" />

        <Button
            android:id="@+id/buttonSettingsAdvancedClearAppData"
            style="@style/SwitchColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@null"
            android:gravity="start|center_vertical"
            android:text="@string/settings_advanced_delete_application_data" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>