<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".frontend.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="8dp"
            android:gravity="fill_horizontal|fill_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewSettingsStreamAllData"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/settings_enable_uploading_all_data"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/switchSettingsStreamAllData"
                android:theme="@style/SwitchColor"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:padding="8dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="8dp"
            android:gravity="fill_horizontal|fill_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewSettingsRoaming"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/settings_enable_roaming"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/switchSettingsRoaming"
                android:theme="@style/SwitchColor"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:padding="8dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="8dp"
            android:gravity="fill_horizontal|fill_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewSettingsPickup"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/settings_enable_pickup"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/switchSettingsPickup"
                android:theme="@style/SwitchColor"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:padding="8dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="8dp"
            android:gravity="fill_horizontal|fill_vertical"
            android:orientation="horizontal"
            android:visibility="visible">

            <Button
                android:id="@+id/buttonSettingsAdvancedShow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:text="@string/settings_advanced_open"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>